--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mysql2": "^2.3.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -26,3 +27,5 @@
     "jest": "^27.5.1"
   }
 }
+
+
